some more writing

--- a/Paper/text/references.bib
+++ b/Paper/text/references.bib
@@ -47,3 +47,33 @@
  publisher = {ACM},
  address = {New York, NY, USA}
 } 
+
+@article{Bille2005,
+    author = {Philip Bille},
+    title = {A survey on tree edit distance and related problems},
+    journal = {Theor. Comput. Sci},
+    year = {2005},
+    volume = {337},
+    pages = {217--239}
+}
+
+@article{Hirschberg1977,
+ author = {Hirschberg, Daniel S.},
+ title = {Algorithms for the Longest Common Subsequence Problem},
+ journal = {J. ACM},
+ volume = {24},
+ number = {4},
+ month = oct,
+ year = {1977},
+ pages = {664--675},
+ publisher = {ACM},
+ address = {New York, NY, USA}
+} 
+
+@mastersthesis{Tieleman2006,
+    author = {Tieleman, Sjoerd},
+    month = aug,
+    school = {Universiteit Utrecht},
+    title = {{Formalisation of version control with an emphasis on tree-structured data}},
+    year = {2006}
+}
