Got natbib and bibtex to work together

--- a/Paper/text/references.bib
+++ b/Paper/text/references.bib
@@ -32,6 +32,7 @@
 
 @misc{Shaw2014,
   title={boomerang},
+  year={2014},
   howpublished="\url{http://hackage.haskell.org/package/boomerang}",
   author={Shaw, Jeremy},
   note={Acessed: November 2015}
@@ -76,4 +77,11 @@
     school = {Universiteit Utrecht},
     title = {{Formalisation of version control with an emphasis on tree-structured data}},
     year = {2006}
+}
+
+@mastersthesis{Vassena2015,
+  author= {Vassena, Marco},
+  year = {2015},
+  school = {Universiteit Utrecht},
+  title = {SVC, A prototype of a Structure-aware Version Control system}
 }
