Changes here and there; added text

--- a/Paper/text/ref_hook.tex
+++ b/Paper/text/ref_hook.tex
@@ -14,7 +14,7 @@
 \begin{document}
 
 \nocite{*}
-\bibliographystyle{plainnat}
+\bibliographystyle{abbrvnat}
 \bibliography{text/references}
   
 \end{document}
