--- a/Paper/text/references.bib
+++ b/Paper/text/references.bib
@@ -85,3 +85,11 @@
   school = {Universiteit Utrecht},
   title = {SVC, A prototype of a Structure-aware Version Control system}
 }
+
+@book{Bezem2003,
+  title={Term Rewriting Systems},
+  author={Bezem, M. and Klop, J.W. and de Vrijer, R. and Terese},
+  series={Cambridge Tracts in Theoretical Computer Science},
+  year={2003},
+  publisher={Cambridge University Press}
+}
