a lot of changes in the paper

--- a/Paper/text/references.bib
+++ b/Paper/text/references.bib
@@ -93,3 +93,14 @@
   year={2003},
   publisher={Cambridge University Press}
 }
+
+@inproceedings{Khanna2007,
+ author = {Khanna, Sanjeev and Kunal, Keshav and Pierce, Benjamin C.},
+ title = {A Formal Investigation of Diff3},
+ booktitle = {Proceedings of the 27th International Conference on Foundations of Software Technology and Theoretical Computer Science},
+ series = {FSTTCS'07},
+ year = {2007},
+ pages = {485--496},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg}
+} 
