--- a/Paper/text/references.bib
+++ b/Paper/text/references.bib
@@ -30,6 +30,14 @@
  address = {New York, NY, USA}
 } 
 
+@misc{Piponi2007,
+  title={The Antidiagonal},
+  author={Piponi, Dan},
+  year={2007},
+  howpublished="\url{http://blog.sigfpe.com/2007/09/type-of-distinct-pairs.html}",
+  note={Acessed: Feb 2016}
+}
+
 @misc{Shaw2014,
   title={boomerang},
   year={2014},
