Some text and spell check

--- a/Paper/text/references.bib
+++ b/Paper/text/references.bib
@@ -18,6 +18,28 @@
     publisher = {Springer-Verlag}
 }
 
+@InProceedings{Demaine2007,
+  AUTHOR        = {Erik D. Demaine and Shay Mozes and Benjamin Rossman and Oren Weimann},
+  TITLE         = {An Optimal Decomposition Algorithm for Tree Edit Distance},
+  BOOKTITLE     = {Proceedings of the 34th International Colloquium on
+                   Automata, Languages and Programming (ICALP 2007)},
+  MONTH         = {July 9--13},
+  YEAR          = 2007,
+  ADDRESS       = {Wroclaw, Poland},
+  PAGES         = {146--157}
+}
+
+@inproceedings{Klein1998,
+ author = {Klein, Philip N.},
+ title = {Computing the Edit-Distance Between Unrooted Ordered Trees},
+ booktitle = {Proceedings of the 6th Annual European Symposium on Algorithms},
+ series = {ESA '98},
+ year = {1998},
+ pages = {91--102},
+ publisher = {Springer-Verlag},
+ address = {London, UK, UK}
+} 
+
 @article{Rendel2010,
  author = {Rendel, Tillmann and Ostermann, Klaus},
  title = {Invertible Syntax Descriptions: Unifying Parsing and Pretty Printing},
@@ -30,11 +52,45 @@
  address = {New York, NY, USA}
 } 
 
+@article{PeytonJones2006,
+ author = {Peyton Jones, Simon and Vytiniotis, Dimitrios and Weirich, Stephanie and Washburn, Geoffrey},
+ title = {Simple Unification-based Type Inference for GADTs},
+ journal = {SIGPLAN Not.},
+ volume = {41},
+ number = {9},
+ month = sep,
+ year = {2006},
+ pages = {50--61},
+ publisher = {ACM},
+ address = {New York, NY, USA}
+} 
+
+@phdthesis{Mitchell2008,
+  title = {Transformation and Analysis of Functional Programs},
+  author = {Neil Mitchell},
+  year = {2008},
+  month = {June},
+  school = {University of York}
+}
+
 @misc{Piponi2007,
   title={The Antidiagonal},
   author={Piponi, Dan},
   year={2007},
   howpublished="\url{http://blog.sigfpe.com/2007/09/type-of-distinct-pairs.html}",
+  note={Acessed: Feb 2016}
+}
+
+@article{Jacobson2009,
+  title={A formalization of darcs patch theory using inverse semigroups},
+  author={Jacobson, Judah},
+  journal={Available from \url{ftp://ftp.math.ucla.edu/pub/camreport/cam09-83.pdf}},
+  year={2009}
+}
+
+@misc{Darcs,
+  title={Darcs Theory},
+  howpublished="\url{http://darcs.net/Theory}",
   note={Acessed: Feb 2016}
 }
 
@@ -66,6 +122,15 @@
     pages = {217--239}
 }
 
+@INPROCEEDINGS{Bergroth2000,
+  author={L. Bergroth and H. Hakonen and T. Raita},
+  booktitle={String Processing and Information Retrieval, 2000. SPIRE 2000. Proceedings. Seventh International Symposium on},
+  title={A survey of longest common subsequence algorithms},
+  year={2000},
+  pages={39-48},
+  month={}
+}
+
 @article{Hirschberg1977,
  author = {Hirschberg, Daniel S.},
  title = {Algorithms for the Longest Common Subsequence Problem},
@@ -78,6 +143,15 @@
  publisher = {ACM},
  address = {New York, NY, USA}
 } 
+
+@article{Mimram2013,
+  author    = {Samuel Mimram and
+               Cinzia Di Giusto},
+  title     = {A Categorical Theory of Patches},
+  journal   = {CoRR},
+  volume    = {abs/1311.3903},
+  year      = {2013}
+}
 
 @mastersthesis{Tieleman2006,
     author = {Tieleman, Sjoerd},
