Removed some unused refs

--- a/Paper/text/references.bib
+++ b/Paper/text/references.bib
@@ -40,18 +40,6 @@
  address = {London, UK, UK}
 } 
 
-@article{Rendel2010,
- author = {Rendel, Tillmann and Ostermann, Klaus},
- title = {Invertible Syntax Descriptions: Unifying Parsing and Pretty Printing},
- journal = {SIGPLAN Not.},
- volume = {45},
- number = {11},
- year = {2010},
- pages = {1--12},
- publisher = {ACM},
- address = {New York, NY, USA}
-} 
-
 @article{PeytonJones2006,
  author = {Peyton Jones, Simon and Vytiniotis, Dimitrios and Weirich, Stephanie and Washburn, Geoffrey},
  title = {Simple Unification-based Type Inference for GADTs},
@@ -94,25 +82,6 @@
   note={Acessed: Feb 2016}
 }
 
-@misc{Shaw2014,
-  title={boomerang},
-  year={2014},
-  howpublished="\url{http://hackage.haskell.org/package/boomerang}",
-  author={Shaw, Jeremy},
-  note={Acessed: November 2015}
-}
-
-@inproceedings{Loh2015,
- author = {Mestanogullari, Alp and Hahn, S\"{o}nke and Arni, Julian K. and L\"{o}h, Andres},
- title = {Type-level Web APIs with Servant: An Exercise in Domain-specific Generic Programming},
- booktitle = {Proceedings of the 11th ACM SIGPLAN Workshop on Generic Programming},
- series = {WGP 2015},
- year = {2015},
- pages = {1--12},
- publisher = {ACM},
- address = {New York, NY, USA}
-} 
-
 @article{Bille2005,
     author = {Philip Bille},
     title = {A survey on tree edit distance and related problems},
@@ -131,19 +100,6 @@
   month={}
 }
 
-@article{Hirschberg1977,
- author = {Hirschberg, Daniel S.},
- title = {Algorithms for the Longest Common Subsequence Problem},
- journal = {J. ACM},
- volume = {24},
- number = {4},
- month = oct,
- year = {1977},
- pages = {664--675},
- publisher = {ACM},
- address = {New York, NY, USA}
-} 
-
 @article{Mimram2013,
   author    = {Samuel Mimram and
                Cinzia Di Giusto},
@@ -153,6 +109,7 @@
   year      = {2013}
 }
 
+% unused!
 @mastersthesis{Tieleman2006,
     author = {Tieleman, Sjoerd},
     month = aug,
