--- a/Paper/text/references.bib
+++ b/Paper/text/references.bib
@@ -109,7 +109,6 @@
   year      = {2013}
 }
 
-% unused!
 @mastersthesis{Tieleman2006,
     author = {Tieleman, Sjoerd},
     month = aug,
@@ -117,6 +116,17 @@
     title = {{Formalisation of version control with an emphasis on tree-structured data}},
     year = {2006}
 }
+
+@inproceedings{norell2009,
+ author = {Norell, Ulf},
+ title = {Dependently Typed Programming in Agda},
+ booktitle = {Proceedings of the 4th International Workshop on Types in Language Design and Implementation},
+ series = {TLDI '09},
+ year = {2009},
+ pages = {1--2},
+ publisher = {ACM},
+ address = {New York, NY, USA}
+} 
 
 @mastersthesis{Vassena2015,
   author= {Vassena, Marco},
