Answered the remarks. Some still need some work.

--- a/Paper/text/references.bib
+++ b/Paper/text/references.bib
@@ -143,6 +143,26 @@
   publisher={Cambridge University Press}
 }
 
+@inproceedings{Swierstra2014,
+ author = {Swierstra, Wouter and L\"{o}h, Andres},
+ title = {The Semantics of Version Control},
+ booktitle = {Proceedings of the 2014 ACM International Symposium on New Ideas, New Paradigms, and Reflections on Programming \&\#38; Software},
+ series = {Onward! '14},
+ year = {2014},
+ pages = {43--54}
+} 
+
+@inproceedings{Angiuli2014,
+ author = {Angiuli, Carlo and Morehouse, Edward and Licata, Daniel R. and Harper, Robert},
+ title = {Homotopical Patch Theory},
+ booktitle = {Proceedings of the 19th ACM SIGPLAN International Conference on Functional Programming},
+ series = {ICFP '14},
+ year = {2014},
+ pages = {243--256},
+ publisher = {ACM},
+ address = {New York, NY, USA}
+} 
+
 @inproceedings{Khanna2007,
  author = {Khanna, Sanjeev and Kunal, Keshav and Pierce, Benjamin C.},
  title = {A Formal Investigation of Diff3},
